--- a/explorience-front/package.json
+++ b/explorience-front/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.8.0",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.0",
     "vue": "^3.2.13",
     "vue-i18n": "10.0.0-beta.5"
   },
