--- a/explorience-server/src/main/resources/application.properties
+++ b/explorience-server/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=explorience-server
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/portal
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+spring.mail.host=smtp.qq.com
+spring.mail.port=587
+spring.mail.username=824087050@qq.com
+spring.mail.password=paidafweggyebede
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.startssl.enable=true
+spring.mail.default-encoding=UTF-8
