--- a/explorience-server/src/main/resources/application.properties
+++ b/explorience-server/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.mail.password=paidafweggyebede
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.startssl.enable=true
 spring.mail.default-encoding=UTF-8
+#redis
+spring.redis.host=localhost
+#spring.redis.password=
+spring.redis.database=0
+spring.redis.lettuce.pool.max-active=8
+spring.data.redis.repositories.enabled=false
