--- a/explorience-front/package.json
+++ b/explorience-front/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.4",
     "core-js": "^3.8.3",
     "element-plus": "^2.8.0",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.0",
     "vue": "^3.2.13",
-    "vue-i18n": "10.0.0-beta.5"
+    "vue-i18n": "10.0.0-beta.5",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
