--- a/explorience-server/src/main/resources/application.properties
+++ b/explorience-server/src/main/resources/application.properties
@@ -4,13 +4,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/portal
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.mail.host=smtp.qq.com
-spring.mail.port=587
-spring.mail.username=824087050@qq.com
-spring.mail.password=paidafweggyebede
+spring.mail.protocol=smtps
+spring.mail.host=smtp.163.com
+spring.mail.port=465
+spring.mail.username=shemin2046@163.com
+spring.mail.password=LQRIBZVMWSXWYJMH
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.startssl.enable=true
+spring.mail.properties.mail.smtp.startssl.required=true
 spring.mail.default-encoding=UTF-8
+send.mail.enabled=false
 #redis
 spring.redis.host=localhost
 #spring.redis.password=
