--- a/explorience-front/package.json
+++ b/explorience-front/package.json
@@ -16,7 +16,8 @@
     "sass-loader": "^16.0.0",
     "vue": "^3.2.13",
     "vue-i18n": "10.0.0-beta.5",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
